--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "embla-carousel": "^8.2.0",
+    "embla-carousel-auto-scroll": "^8.2.0",
+    "embla-carousel-react": "^8.2.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
