--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/axios": "^0.14.0",
     "@types/node": "^20",
     "@types/react": "^18",
